It still is not finished, but it compiles for the sake of testing Echo